Add option for configuring LoadBalance algorithm in backend
