# api/openapi-spec/swagger.json
@@ -2204,6 +2204,10 @@
             "type": "string"
           }
         },
+        "loadBalanceOn": {
+          "description": "Define the load balancing algorithm to be used in a backend. https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#balance",
+          "type": "string"
+        },
         "name": {
           "description": "User can specify backend name for using it with custom acl Otherwise it will be generated",
           "type": "string"
@@ -2339,6 +2343,10 @@
           "items": {
             "type": "string"
           }
+        },
+        "loadBalanceOn": {
+          "description": "Define the load balancing algorithm to be used in a backend. https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#balance",
+          "type": "string"
         },
         "name": {
           "description": "User can specify backend name for using it with custom acl Otherwise it will be generated",
